--- a/bin/reversiApp/reversiGame.fxml
+++ b/bin/reversiApp/reversiGame.fxml
@@ -4,7 +4,4 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.control.*?>
 <HBox xmlns:fx="http://javafx.com/fxml/1" fx:controller="reversiApp.reversiGameController" fx:id="root" spacing="10">
-	<VBox spacing="10"> 
-		<Button>Start Game</Button> 
-		<Button>End Game</Button>
-</VBox> </HBox>
+	 </HBox>
